# deepfake-ethics

./: README.md  analysis.py  backend.py  deploy.sh  flask_app.py  pyproject.toml  run_analysis.bat  run_analysis.sh  run_backend.bat  run_backend.sh  scores.db
sql/: consideration_impact.sql  exhibit_score_detection_theme.sql  overall_score_change.sql  user_guess_priming.sql
static/: script.js  style.css  style_light.css
templates/: about.html  game.html  index.html
